--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#007DFF</color>
     <color name="dark_blue">#03236B</color>
     <color name="gray">#4A5E70</color>
+    <color name="blue1">#4DC3F8</color>
 </resources>
