--- a/app/src/main/res/layout/activity_shop_now.xml
+++ b/app/src/main/res/layout/activity_shop_now.xml
@@ -5,53 +5,53 @@
     android:layout_height="match_parent"
     tools:context=".ShopNow">
 
-    <LinearLayout
-        android:id="@+id/linerLayout"
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:background="@drawable/bottom_radius_bg"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:id="@+id/shop_now_toolBar"
+        android:background="#19Adef">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/border1_gray"
-            android:backgroundTint="@color/white"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="10">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/header_title"
+                android:src="@drawable/ic_baseline_format_list_bulleted_24"/>
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/ic_baseline_search_24"
-                android:paddingStart="5dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:textColor="@color/white"
                 android:layout_gravity="center"
-                android:layout_weight="8"
-                android:gravity="left"
-                android:hint="Search"
-                android:paddingStart="10dp"
-                android:textColor="@color/gray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="15dp"
+                android:textStyle="bold"
+                android:text="Shop Now"/>
+
+
 
         </LinearLayout>
 
-    </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+
+
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linerLayout"
+        android:layout_below="@+id/shop_now_toolBar"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
