--- a/app/src/main/res/layout/activity_shop_now.xml
+++ b/app/src/main/res/layout/activity_shop_now.xml
@@ -6,9 +6,9 @@
     tools:context=".ShopNow">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/shop_now_toolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/shop_now_toolBar"
         android:background="#19Adef">
 
         <LinearLayout
@@ -18,22 +18,21 @@
             android:weightSum="10">
 
             <ImageView
+                android:id="@+id/header_title"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:id="@+id/header_title"
-                android:src="@drawable/ic_baseline_format_list_bulleted_24"/>
+                android:src="@drawable/ic_baseline_format_list_bulleted_24" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
-                android:textColor="@color/white"
                 android:layout_gravity="center"
                 android:layout_marginLeft="15dp"
-                android:textStyle="bold"
-                android:text="Shop Now"/>
-
+                android:text="Shop Now"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
