--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="dark_blue">#03236B</color>
     <color name="gray">#4A5E70</color>
     <color name="blue1">#4DC3F8</color>
+    <color name="primary">#19Adef</color>
 </resources>
