--- a/app/src/main/res/layout/activity_login_actvity.xml
+++ b/app/src/main/res/layout/activity_login_actvity.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parentRelative"
     tools:context=".LoginModule.LoginActvity">
 
@@ -56,6 +57,35 @@
             android:paddingLeft="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkbox_login_activity"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:background="@color/primary"
+                app:color_checked="@color/white"
+                tools:ignore="MissingClass" />
+
+            <TextView
+                android:id="@+id/text_reme_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:text="@string/remember_me"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
 
         <Button
