--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/logoImageView"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/round_rectangle"
         android:orientation="vertical"
         android:weightSum="10"
@@ -29,11 +29,26 @@
 
 
         <EditText
+            android:id="@+id/userName"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/border_radius"
+            android:hint="User Name"
+            android:inputType="text"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+
+        <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="30dp"
             android:background="@drawable/border_radius"
             android:hint="Email Address"
@@ -59,15 +74,16 @@
 
 
         <EditText
-            android:id="@+id/password2"
+            android:id="@+id/mobile_no"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="30dp"
             android:background="@drawable/border_radius"
-            android:hint="Confirm Password"
-            android:inputType="textVisiblePassword"
+            android:hint="Mobile Number"
+            android:inputType="number"
+            android:maxLength="10"
             android:paddingLeft="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
@@ -78,7 +94,7 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/white"
             android:text="SIGNUP"
             android:textColor="#19ADEF" />
@@ -128,7 +144,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="10"
             android:orientation="horizontal">
 
