--- a/app/src/main/res/layout/activity_login_actvity.xml
+++ b/app/src/main/res/layout/activity_login_actvity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parentRelative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -57,6 +58,33 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkbox_login_activity"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                />
+
+            <TextView
+                android:id="@+id/text_reme_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:text="@string/remember_me"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/login"
             android:layout_width="220dp"
@@ -65,6 +93,14 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="@color/white"
             android:text="Login"
+            android:textColor="#19ADEF" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:textColor="#19ADEF" />
 
         <LinearLayout
