--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -98,6 +98,15 @@
             android:text="SIGNUP"
             android:textColor="#19ADEF" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:textColor="#19ADEF" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -118,6 +127,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="30dp"
             android:gravity="center">
 
