--- a/app/src/main/res/layout/activity_login_actvity.xml
+++ b/app/src/main/res/layout/activity_login_actvity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentRelative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,17 +17,15 @@
         android:src="@drawable/logo"
         tools:ignore="NotSibling" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/logoImageView"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/round_rectangle"
         android:orientation="vertical"
         android:weightSum="10"
         tools:ignore="NotSibling">
-
 
         <EditText
             android:id="@+id/email"
@@ -42,7 +40,6 @@
             android:paddingLeft="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
-
 
         <EditText
             android:id="@+id/password1"
@@ -59,29 +56,62 @@
             android:textColorHint="@color/white" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
-            android:orientation="horizontal">
+            android:layout_marginRight="30dp"
+            android:weightSum="2">
 
-            <CheckBox
-                android:id="@+id/checkbox_login_activity"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:id="@+id/text_reme_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:text="@string/remember_me"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/checkbox_login_activity"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center" />
+
+                <TextView
+                    android:id="@+id/text_reme_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/remember_me"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/forgotPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:text="Forgot Password"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -97,11 +127,11 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="#19ADEF" />
+            android:textColor="#19ADEF"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
