--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -29,9 +29,8 @@
                     android:id="@+id/yourMobileNo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Your Mobile No."
-                    android:inputType="number"
-                    android:maxLength="10" />
+                    android:hint="Mobile/email"
+                    android:inputType="text" />
 
                 <EditText
                     android:id="@+id/newPassword"
@@ -65,6 +64,15 @@
                 android:text="UPDATE"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="#19ADEF"
+                android:visibility="gone" />
+
 
         </LinearLayout>
 
