--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:id="@+id/linearlayoutProfile"
             android:layout_width="match_parent"
+            android:layout_marginTop="30dp"
             android:layout_height="wrap_content"
             android:elevation="4dp"
             android:gravity="center"
@@ -29,11 +30,20 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="10dp"
                 android:layout_marginStart="10dp"
-                android:background="@drawable/profile_logo"
-                android:visibility="visible"
+                android:src="@drawable/profile_logo"
                 app:civ_border_color="#efefef"
-                app:civ_border_width="2dp"
-                app:civ_circle_background_color="@android:color/white" />
+                app:civ_border_width="2dp" />
+
+            <ImageView
+                android:id="@+id/profileChange"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="-40dp"
+                android:src="@drawable/ic_baseline_photo_camera_24"/>
+
+
+
 
         </LinearLayout>
 
@@ -60,6 +70,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/userEmail"
                 android:layout_gravity="center"
                 android:backgroundTint="#5EB7DA"
                 android:gravity="center"
@@ -209,49 +220,6 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearlayout4"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@+id/linearlayout3"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center"
-        android:weightSum="8.4">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_baseline_logout_24" />
-
-        <View
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".4" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="3"
-            android:gravity="left"
-            android:text="Logout"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_black" />
-
-    </LinearLayout>
 
 </RelativeLayout>
