--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#19Adef</color>
+    <color name="purple_700">#19Adef</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -14,4 +14,8 @@
     <color name="blue1">#4DC3F8</color>
     <color name="primary">#19Adef</color>
     <color name="genre_view_bg">#80000000</color>
+    <color name="BlackTransparent">#8F000000</color>
+    <color name="Blue_Dress">#157DEC</color>
+    <color name="red">#FF0000</color>
+    <color name="lineColor">#B8B8B8</color>
 </resources>
