--- a/app/src/main/res/layout/activity_login_actvity.xml
+++ b/app/src/main/res/layout/activity_login_actvity.xml
@@ -11,9 +11,12 @@
         android:id="@+id/logoImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_below="@+id/parentRelative"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="162dp"
         android:src="@drawable/logo"
         tools:ignore="NotSibling" />
 
@@ -50,7 +53,7 @@
             android:layout_marginRight="30dp"
             android:background="@drawable/border_radius"
             android:hint="Password"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
