--- a/app/src/main/res/layout/sub_category_item.xml
+++ b/app/src/main/res/layout/sub_category_item.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="10dp"
     android:orientation="vertical"
     app:cardCornerRadius="5dp"
     app:cardUseCompatPadding="false"
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_margin="7dp"
             android:id="@+id/cat_Image_View"
+            android:background="@drawable/image_order"
             android:scaleType="fitXY"
-
             android:layout_height="90dp"
             android:layout_weight="3"/>
 
@@ -67,11 +67,6 @@
                 android:layout_marginTop="20dp"
                 android:text="All CateGeory Name"/>
 
-
-
-
-
-
         </LinearLayout>
 
 
@@ -91,7 +86,7 @@
                 android:id="@+id/favrouite"
                 android:layout_gravity="right"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/ic_baseline_favorite_border_24"/>
+                android:src="@drawable/favrouite"/>
         </LinearLayout>
 
 
